--- a/src/componentes/SecaoSobre/estilos.css
+++ b/src/componentes/SecaoSobre/estilos.css
@@ -1,6 +1,6 @@
 /* Seção sobre */
 .secao-sobre {
-  background-color: #F8F7FF;
+  background-color: #f8f7ff00;
   padding: 100px 20px;
   text-align: center;
 }
