--- a/src/componentes/SecaoProdutos/estilos.css
+++ b/src/componentes/SecaoProdutos/estilos.css
@@ -10,12 +10,14 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-evenly;
+  gap: 2px; /* Adicione o espaço desejado entre as imagens */
+
 }
 
 .box-produto {
   background-color: #F6F6F6;
-  width: calc(50% - 15px);
+  width: calc(33.33% - 20px); /* Define a largura de 33.33% para telas maiores */
   margin: 0 0 20px;
   padding: 20px 10px;
   display: flex;
@@ -23,6 +25,12 @@
   align-items: center;
   justify-content: center;
 }
+
+h3 {
+  margin: 0;
+  font-size: 32px;
+}
+
 .box-produto h4 {
   margin: 0;
   font-size: 32px;
@@ -40,7 +48,6 @@
   font-weight: bold;
   font-size: 22px;
 }
-
 
 .secao-produtos ul {
   padding: 0 20px;
@@ -64,10 +71,11 @@
   .box-produto img {
     max-height: 100px;
   }
-  .box-produto p{
+  .box-produto p {
     font-size: 16px;
   }
 }
+
 @media (max-width: 550px) {
   .secao-produtos {
     padding: 60px 10px;
