--- a/src/componentes/SecaoSobre/estilos.css
+++ b/src/componentes/SecaoSobre/estilos.css
@@ -3,6 +3,7 @@
   background-color: #f8f7ff00;
   padding: 100px 20px;
   text-align: center;
+  
 }
 
 .container-sobre p {
@@ -13,12 +14,18 @@
   display: flex;
   flex-wrap: wrap;
   margin-top: 50px;
+  margin: 50px 0;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  gap: 2px; /* Adicione o espaço desejado entre as imagens */
 }
 
 .box-cards img,
 .card {
   width: 50%;
-  border: 1px solid #a2adad;
+  border: 1px solid #a2adad00;
   max-height: 300px;
 }
 
@@ -32,7 +39,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 20px 25px;
   background-color: #fff;
 }
 
@@ -46,7 +52,7 @@
 
 .card p {
   font-size: 22px;
-  color: #4a4a4a;
+  color: #270606;
 }
 
 
